--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,4 +33,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: Dagplanner
-        path: /home/runner/work/Dagplanner/Dagplanner/Dagplanner/bin/Release/net6.0-windows
+        path: /home/runner/work/Dagplanner/Dagplanner/Dagplanner/bin/Release/net6.0-windows/publish
