--- a/Dagplanner/Dagplanner.csproj
+++ b/Dagplanner/Dagplanner.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="FreeSpire.XLS" Version="12.7.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.1" />
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.1" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.117" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="7.0.0" />
   </ItemGroup>
 
